--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-reveal": "^1.2.2",
     "sass": "^1.77.1",
     "tailwind-merge": "^2.3.0",
     "typed.js": "^2.1.0",
@@ -34,7 +33,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
-    "eslint": "8.1.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "^14.2.13",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
